quiz pnt/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pnt-ingress
  namespace: pnt-quiz
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Nonaktifkan SSL Redirect jika tidak menggunakan HTTPS
spec:
  rules:
  - host: frontend.local  # Ganti dengan domain frontend yang Anda inginkan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80  # Port yang digunakan oleh service frontend

  - host: backend.local  # Ganti dengan domain backend yang Anda inginkan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000  # Port yang digunakan oleh service backend
